partman-auto (76) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Support preseeding partman-auto/choose_recipe using the name of the
    recipe you want (e.g. "home"), as an alternative to the localised
    description.

  [ Guido Guenther ]
  * Allow multipathed devices as auto_disks

 -- Guido Guenther <agx@sigxcpu.org>  Sat, 01 Mar 2008 17:49:52 +0100

partman-auto (75) unstable; urgency=low

  [ Updated translations ]
  * Finnish (fi.po) by Esko Arajärvi
  * Hindi (hi.po) by Kumar Appaiah
  * Indonesian (id.po) by Arief S Fitrianto
  * Latvian (lv.po) by Viesturs Zarins
  * Panjabi (pa.po) by Amanpreet Singh Alam
  * Turkish (tr.po) by Recai Oktaş
  * Traditional Chinese (zh_TW.po) by Tetralet

 -- Otavio Salvador <otavio@ossystems.com.br>  Fri, 15 Feb 2008 09:33:08 -0200

partman-auto (74) unstable; urgency=low

  * Don't create the last partition as a logical partition when all partitions
    are defined as primary and there are sufficient primary partitions
    available. Closes: #413505.
  * Make it possible to use a primary partition for LVM. Thanks to Grégory
    Oestreicher for spotting the issue and providing an initial patch.
  * recipes.sh: simplify foreach_partition(); improves debug log readability.

  [ Updated translations ]
  * Amharic (am.po) by tegegne tefera
  * Korean (ko.po) by Changwoo Ryu
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ
  * Portuguese (pt.po) by Miguel Figueiredo

 -- Frans Pop <fjp@debian.org>  Mon, 21 Jan 2008 09:59:51 +0100

partman-auto (73) unstable; urgency=low

  * Moved definitions.sh to ./lib/base.sh.
  * Move recipes.sh and auto-shared.sh to ./lib/.
  * auto-shared.sh: rename wipe_disk() to auto_init_disk().
  * Use functions provided by partman-partitioning in auto_init_disk():
    - use the create_new_label function; don't prompt for disk label to use
      unless the default is invalid
    - create_new_label will now take care of removing existing LVM data from