@@ -33,6 +33,8 @@ db_progress STEP 1
 
 expand_scheme
 
+ensure_primary
+
 db_progress STEP 1
 
 clean_method
